--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,14 @@
     <title>Jeelkumar Patel - Biography</title>
 </head>
 <body>
-    <h1>Jeelkumar Patel - Biography</h1>
+    <header>
+        <h1>Jeelkumar Patel - Biography</h1>
+        <p>You only have one life so, try to achieve all of your Goals.</p>
+    </header>
+
+    <section>
+        <h2>The Biography</h2>
+        <p>I am currently enrolled in Computer Programming course in Georgian college and have some great expectations from the college after I finish my college.</p>
+    </section>
 </body>
 </html>
