--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,14 @@
     <section>
         <h2>The Biography</h2>
         <p>I am currently enrolled in Computer Programming course in Georgian college and have some great expectations from the college after I finish my college.</p>
+        <!-- Where I was born -->
+        <p>Somethings more about me: I was born in India Nadia, Nadiad. I do not remember the name of the hospital but it was in Ahmedabad, a very developed city.</p>
+        <!-- What school did I attend -->
+        <p>I studied in SNV International school located in Gujarat, Bhumel. I studied in that school for 2 years(Completed my 11th and 12th in this school).</p>
+        <!-- What achievements have I made? -->
+        <p>I do not have any achievements in particular but I won 1 gold amd 2 silver medals in some of the inner school sports competitions.</p>
+        <!-- What goals/ambitions do you have? -->
+        <p>My goal after completing the college is to get a good position in GOOGLE and work with the CEO of Google.</p>
     </section>
 </body>
 </html>
